add load balancer code successfully

--- a/couponService/src/main/resources/application.properties
+++ b/couponService/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.generate-ddl=false
 spring.application.name=coupon-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetchRegistry=true
+
+server.port=8082
+
