--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.generate-ddl=false
 #spring.liquibase.change-log=classpath:/db/changelog/app-changelog.xml
 
 #eureka
-server.port=8081
+server.port=9090
 spring.application.name=product-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-coupon-service.ribbon.listOfServers= localhost:8080
-
+spring.cloud.loadbalancer.ribbon.enabled=false
+eureka.client.fetchRegistry=true
