--- a/productService/pom.xml
+++ b/productService/pom.xml
@@ -75,8 +75,8 @@
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-			<version>2.2.10.RELEASE</version>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 	</dependencies>
