add fault tolerance code successfully

--- a/productService/src/main/resources/application.properties
+++ b/productService/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.application.name=product-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.cloud.loadbalancer.ribbon.enabled=false
 eureka.client.fetchRegistry=true
+
+resilience4j.retry.instances.product-api.max-attempts= 2
+resilience4j.retry.instances.product-api.wait-duration= 3s
