--- a/productService/pom.xml
+++ b/productService/pom.xml
@@ -85,6 +85,12 @@
 			<version>1.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
