--- a/productService/src/main/resources/bootstrap.properties
+++ b/productService/src/main/resources/bootstrap.properties
@@ -1,3 +1,7 @@
 spring.application.name=product-service
 spring.cloud.config.uri=http://localhost:8888
-spring.profiles.active=dev
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
