--- a/productService/pom.xml
+++ b/productService/pom.xml
@@ -102,6 +102,12 @@
 			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+			<version>2.2.10.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
